--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -131,38 +131,209 @@ header .header-part nav ul li a:hover {
   text-transform: uppercase;
   font-size: 13px;
 }
-#portfolio .img-portfolio {
+#portfolio .body-p .ana-portfolio {
   display: flex;
-  gap: 25px;
   flex-wrap: wrap;
-  padding-top: 20px;
+  gap: 30px;
+  padding-top: 15px;
 }
-#portfolio .img-portfolio .left-img {
+#portfolio .body-p .ana-portfolio .img-p {
   display: flex;
   flex-direction: column;
-  gap: 25px;
-  width: 500px;
+  gap: 30px;
 }
-#portfolio .img-portfolio .right-img {
+#portfolio .body-p .ana-portfolio .img-p .left-p {
+  position: relative;
+}
+#portfolio .body-p .ana-portfolio .img-p .left-p:hover .hover-p {
+  display: block;
+}
+#portfolio .body-p .ana-portfolio .img-p .left-p img {
+  width: 540px;
+  height: 837px;
+}
+#portfolio .body-p .ana-portfolio .img-p .left-p .hover-p {
+  width: 540px;
+  height: 837px;
+  position: absolute;
+  background-color: blue;
+  opacity: 0.75;
+  top: 1rem;
+  left: 1rem;
+  display: flex;
+  justify-content: start;
+  align-items: end;
+  padding: 15px;
+  animation: anime 1s;
+  display: none;
+}
+#portfolio .body-p .ana-portfolio .img-p .left-p .hover-p .txt-p {
+  color: white;
+  line-height: 1.5;
+}
+#portfolio .body-p .ana-portfolio .img-p .left-p-2 {
+  position: relative;
+}
+#portfolio .body-p .ana-portfolio .img-p .left-p-2:hover .hover-p {
+  display: block;
+}
+#portfolio .body-p .ana-portfolio .img-p .left-p-2 img {
+  width: 540px;
+}
+#portfolio .body-p .ana-portfolio .img-p .left-p-2 .hover-p {
+  width: 540px;
+  height: 311px;
+  position: absolute;
+  background-color: blue;
+  opacity: 0.75;
+  top: 1rem;
+  left: 1rem;
+  display: flex;
+  justify-content: start;
+  align-items: end;
+  padding: 15px;
+  animation: anime 1s;
+  display: none;
+}
+#portfolio .body-p .ana-portfolio .img-p .left-p-2 .hover-p .txt-p {
+  color: white;
+  line-height: 1.5;
+}
+#portfolio .body-p .ana-portfolio .right-p {
   display: flex;
   flex-direction: column;
-  gap: 25px;
-  width: 545px;
+  gap: 30px;
 }
-#portfolio .img-portfolio .right-img .right-img-head {
+#portfolio .body-p .ana-portfolio .right-p .right-p-top {
+  position: relative;
+}
+#portfolio .body-p .ana-portfolio .right-p .right-p-top:hover .hover-p {
+  display: block;
+}
+#portfolio .body-p .ana-portfolio .right-p .right-p-top img {
+  width: 540px;
+  height: 305px;
+}
+#portfolio .body-p .ana-portfolio .right-p .right-p-top .hover-p {
+  width: 540px;
+  height: 305px;
+  position: absolute;
+  background-color: blue;
+  opacity: 0.75;
+  top: 1rem;
+  left: 1rem;
   display: flex;
-  width: 525px;
-  gap: 25px;
+  justify-content: start;
+  align-items: end;
+  padding: 15px;
+  animation: anime 1s;
+  display: none;
 }
-#portfolio .img-portfolio .right-img #img-3 {
-  height: 436px;
+#portfolio .body-p .ana-portfolio .right-p .right-p-top .hover-p .txt-p {
+  color: white;
+  line-height: 1.5;
+}
+#portfolio .body-p .ana-portfolio .right-p .right-p-middle {
+  display: flex;
+  gap: 30px;
+}
+#portfolio .body-p .ana-portfolio .right-p .right-p-middle .left-middle {
+  position: relative;
+}
+#portfolio .body-p .ana-portfolio .right-p .right-p-middle .left-middle:hover .hover-p {
+  display: block;
+}
+#portfolio .body-p .ana-portfolio .right-p .right-p-middle .left-middle img {
+  width: 255px;
+  height: 303px;
+}
+#portfolio .body-p .ana-portfolio .right-p .right-p-middle .left-middle .hover-p {
+  width: 255px;
+  height: 303px;
+  position: absolute;
+  background-color: blue;
+  opacity: 0.75;
+  top: 1rem;
+  left: 1rem;
+  display: flex;
+  justify-content: start;
+  align-items: end;
+  padding: 15px;
+  animation: anime 1s;
+  display: none;
+}
+#portfolio .body-p .ana-portfolio .right-p .right-p-middle .left-middle .hover-p .txt-p {
+  color: white;
+  line-height: 1.5;
+}
+#portfolio .body-p .ana-portfolio .right-p .right-p-middle .right-middle {
+  position: relative;
+}
+#portfolio .body-p .ana-portfolio .right-p .right-p-middle .right-middle:hover .hover-p {
+  display: block;
+}
+#portfolio .body-p .ana-portfolio .right-p .right-p-middle .right-middle img {
+  width: 255px;
+  height: 303px;
+}
+#portfolio .body-p .ana-portfolio .right-p .right-p-middle .right-middle .hover-p {
+  width: 255px;
+  height: 303px;
+  position: absolute;
+  background-color: blue;
+  opacity: 0.75;
+  top: 1rem;
+  left: 1rem;
+  display: flex;
+  justify-content: start;
+  align-items: end;
+  padding: 15px;
+  animation: anime 1s;
+  display: none;
+}
+#portfolio .body-p .ana-portfolio .right-p .right-p-middle .right-middle .hover-p .txt-p {
+  color: white;
+  line-height: 1.5;
+}
+#portfolio .body-p .ana-portfolio .right-p .right-down {
+  position: relative;
+}
+#portfolio .body-p .ana-portfolio .right-p .right-down:hover .hover-p {
+  display: block;
+}
+#portfolio .body-p .ana-portfolio .right-p .right-down img {
+  width: 540px;
+  height: 509px;
+}
+#portfolio .body-p .ana-portfolio .right-p .right-down .hover-p {
+  width: 540px;
+  height: 509px;
+  position: absolute;
+  background-color: blue;
+  opacity: 0.75;
+  top: 1rem;
+  left: 1rem;
+  display: flex;
+  justify-content: start;
+  align-items: end;
+  padding: 15px;
+  animation: anime 1s;
+  display: none;
+}
+#portfolio .body-p .ana-portfolio .right-p .right-down .hover-p .txt-p {
+  color: white;
+  line-height: 1.5;
 }
 
 #contact {
   margin-top: 30px;
 }
 #contact .contect-blog {
+  display: flex;
+  flex-direction: column;
   text-align: center;
+  padding-top: 30px;
+  width: 100%;
 }
 #contact #head-card i {
   color: #797979;
@@ -203,16 +374,19 @@ header .header-part nav ul li a:hover {
   flex-direction: column;
   gap: 20px;
   margin-top: 30px;
+}
+#contact .down-blog .cards .img-div {
   overflow: hidden;
 }
-#contact .down-blog .cards img {
+#contact .down-blog .cards .img-div img {
   width: 350px;
   height: 301px;
   object-fit: cover;
 }
-#contact .down-blog .cards img:hover {
+#contact .down-blog .cards .img-div img:hover {
   overflow: hidden;
-  transform: scale(1.3);
+  transition: all 0.7s;
+  transform: scale(1.1);
 }
 #contact .down-blog .cards #body-card {
   display: flex;
@@ -283,12 +457,29 @@ footer .footer-part .down-footer p {
   color: white;
 }
 
+@keyframes anime {
+  from {
+    top: -10px;
+    left: -10px;
+  }
+  to {
+    top: 5px;
+    left: 5px;
+  }
+}
 @media (max-width: 992px) {
   header .header-part {
     width: 100%;
   }
+  .ana-portfolio {
+    justify-content: center;
+  }
   #home .left-home {
-    left: 191px;
+    left: 121px;
+  }
+  #home .down-home {
+    width: 100%;
+    justify-content: center;
   }
   #home img {
     display: none;
@@ -306,7 +497,34 @@ footer .footer-part .down-footer p {
   }
 }
 @media (max-width: 600px) {
+  #portfolio {
+    justify-content: center;
+  }
+  #portfolio .body-p .ana-portfolio .right-p .right-p-middle .left-middle img {
+    width: 100%;
+    object-fit: cover;
+  }
+  #portfolio .body-p .ana-portfolio .right-p .right-p-middle .right-middle:hover .hover-p {
+    width: 100%;
+  }
+  #portfolio .body-p .ana-portfolio .right-p .right-p-middle .right-middle img {
+    width: 100%;
+    object-fit: cover;
+  }
+  #portfolio .body-p .ana-portfolio .right-p .right-p-middle {
+    flex-wrap: wrap;
+  }
+  #portfolio .body-p .ana-portfolio .img-p .left-p-2 img {
+    width: 100%;
+  }
+  #portfolio .body-p .ana-portfolio .right-p .right-p-middle .left-middle {
+    width: 100%;
+  }
+  #portfolio .body-p .ana-portfolio .right-p .right-p-middle .right-middle {
+    width: 100%;
+  }
   .header-part {
+    width: 100%;
     justify-content: center;
   }
   .header-part nav {
@@ -316,6 +534,31 @@ footer .footer-part .down-footer p {
     width: 60%;
     left: 0px;
     top: 0px;
+    justify-content: center;
+  }
+  .body-p {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+  }
+  .body-p nav {
+    width: 100%;
+  }
+  .body-p nav ul {
+    width: 100%;
+    justify-content: center;
+  }
+  .body-p .ana-portfolio .img-p {
+    width: 100%;
+  }
+  .body-p .ana-portfolio .img-p img {
+    width: 200px;
+  }
+  #contact .down-blog {
+    justify-content: center;
+  }
+  #contact .contect-blog {
     justify-content: center;
   }
   #portfolio .body-p {
