--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -83,9 +83,11 @@ header {
         .social-home {
             display: flex;
             gap: 20px;
-            i{
+
+            i {
                 font-size: 18px;
-                &:hover{
+
+                &:hover {
                     background: linear-gradient(90deg, #1345e6 0%, #ed239f 100%);
                     -webkit-background-clip: text;
                     -webkit-text-fill-color: transparent;
@@ -151,11 +153,12 @@ header {
                 gap: 30px;
 
                 li {
-                    a{
-                        &:active{
+                    a {
+                        &:active {
                             color: #1345e6;
                         }
                     }
+
                     a {
                         text-transform: uppercase;
                         font-size: 13px;
@@ -163,35 +166,241 @@ header {
                 }
             }
         }
-    }
 
-    .img-portfolio {
-        display: flex;
-        gap: 25px;
-        flex-wrap: wrap;
-        padding-top: 20px;
-
-        .left-img {
+        .ana-portfolio {
             display: flex;
-            flex-direction: column;
-            gap: 25px;
-            width: 500px;
-        }
+            flex-wrap: wrap;
+            gap: 30px;
+            padding-top: 15px;
 
-        .right-img {
-            display: flex;
-            flex-direction: column;
-            gap: 25px;
-            width: 545px;
-
-            .right-img-head {
+            .img-p {
                 display: flex;
-                width: 525px;
-                gap: 25px;
+                flex-direction: column;
+                gap: 30px;
+
+                .left-p {
+                    position: relative;
+
+                    &:hover {
+                        .hover-p {
+                            display: block;
+                        }
+                    }
+
+                    img {
+                        width: 540px;
+                        height: 837px;
+                    }
+
+                    .hover-p {
+                        width: 540px;
+                        height: 837px;
+                        position: absolute;
+                        background-color: blue;
+                        opacity: .75;
+                        top: 1rem;
+                        left: 1rem;
+                        display: flex;
+                        justify-content: start;
+                        align-items: end;
+                        padding: 15px;
+                        animation: anime 1s;
+                        display: none;
+
+                        .txt-p {
+                            color: white;
+                            line-height: 1.5;
+                        }
+                    }
+                }
+
+                .left-p-2 {
+                    position: relative;
+
+                    &:hover {
+                        .hover-p {
+                            display: block;
+                        }
+                    }
+
+                    img {
+                        width: 540px;
+                    }
+
+                    .hover-p {
+                        width: 540px;
+                        height: 311px;
+                        position: absolute;
+                        background-color: blue;
+                        opacity: .75;
+                        top: 1rem;
+                        left: 1rem;
+                        display: flex;
+                        justify-content: start;
+                        align-items: end;
+                        padding: 15px;
+                        animation: anime 1s;
+                        display: none;
+
+                        .txt-p {
+                            color: white;
+                            line-height: 1.5;
+                        }
+                    }
+                }
             }
 
-            #img-3 {
-                height: 436px;
+            .right-p {
+                display: flex;
+                flex-direction: column;
+                gap: 30px;
+
+                .right-p-top {
+                    position: relative;
+
+                    &:hover {
+                        .hover-p {
+                            display: block;
+                        }
+                    }
+
+                    img {
+                        width: 540px;
+                        height: 305px;
+                    }
+
+                    .hover-p {
+                        width: 540px;
+                        height: 305px;
+                        position: absolute;
+                        background-color: blue;
+                        opacity: .75;
+                        top: 1rem;
+                        left: 1rem;
+                        display: flex;
+                        justify-content: start;
+                        align-items: end;
+                        padding: 15px;
+                        animation: anime 1s;
+                        display: none;
+
+                        .txt-p {
+                            color: white;
+                            line-height: 1.5;
+                        }
+                    }
+                }
+
+                .right-p-middle {
+                    display: flex;
+                    gap: 30px;
+
+                    .left-middle {
+                        position: relative;
+
+                        &:hover {
+                            .hover-p {
+                                display: block;
+                            }
+                        }
+
+                        img {
+                            width: 255px;
+                            height: 303px;
+                        }
+
+                        .hover-p {
+                            width: 255px;
+                            height: 303px;
+                            position: absolute;
+                            background-color: blue;
+                            opacity: .75;
+                            top: 1rem;
+                            left: 1rem;
+                            display: flex;
+                            justify-content: start;
+                            align-items: end;
+                            padding: 15px;
+                            animation: anime 1s;
+                            display: none;
+
+                            .txt-p {
+                                color: white;
+                                line-height: 1.5;
+                            }
+                        }
+                    }
+
+                    .right-middle {
+                        position: relative;
+
+                        &:hover {
+                            .hover-p {
+                                display: block;
+                            }
+                        }
+
+                        img {
+                            width: 255px;
+                            height: 303px;
+                        }
+
+                        .hover-p {
+                            width: 255px;
+                            height: 303px;
+                            position: absolute;
+                            background-color: blue;
+                            opacity: .75;
+                            top: 1rem;
+                            left: 1rem;
+                            display: flex;
+                            justify-content: start;
+                            align-items: end;
+                            padding: 15px;
+                            animation: anime 1s;
+                            display: none;
+
+                            .txt-p {
+                                color: white;
+                                line-height: 1.5;
+                            }
+                        }
+                    }
+                }
+
+                .right-down {
+                    position: relative;
+
+                    &:hover {
+                        .hover-p {
+                            display: block;
+                        }
+                    }
+                    img{
+                        width: 540px;
+                        height: 509px;
+                    }
+                    .hover-p {
+                        width: 540px;
+                        height: 509px;
+                        position: absolute;
+                        background-color: blue;
+                        opacity: .75;
+                        top: 1rem;
+                        left: 1rem;
+                        display: flex;
+                        justify-content: start;
+                        align-items: end;
+                        padding: 15px;
+                        animation: anime 1s;
+                        display: none;
+
+                        .txt-p {
+                            color: white;
+                            line-height: 1.5;
+                        }
+                    }
+                }
             }
         }
     }
@@ -201,7 +410,11 @@ header {
     margin-top: 30px;
 
     .contect-blog {
+        display: flex;
+        flex-direction: column;
         text-align: center;
+        padding-top: 30px;
+        width: 100%;
     }
 
     #head-card {
@@ -251,16 +464,20 @@ header {
             flex-direction: column;
             gap: 20px;
             margin-top: 30px;
-            overflow: hidden;
 
-            img {
-                width: 350px;
-                height: 301px;
-                object-fit: cover;
+            .img-div{
+                overflow: hidden;
 
-                &:hover {
-                    overflow: hidden;
-                    transform: scale(1.3);
+                img {
+                    width: 350px;
+                    height: 301px;
+                    object-fit: cover;
+    
+                    &:hover {
+                        overflow: hidden;
+                        transition: all .7s;
+                        transform: scale(1.1);
+                    }
                 }
             }
 
@@ -359,36 +576,58 @@ footer {
     }
 }
 
+@keyframes anime{
+    from{
+        top: -10px;
+        left: -10px;
+    }
+    to{
+        top: 5px;
+        left: 5px;
+    }
+}
 //for tablet
 @media (max-width: 992px) {
-    header{
-        .header-part{
+    header {
+        .header-part {
             width: 100%;
         }
     }
+    .ana-portfolio{
+        justify-content: center;
+    }
+
     #home {
-        .left-home{
-            left: 191px;
+        .left-home {
+            left: 121px;
         }
+
+        .down-home{
+            width: 100%;
+            justify-content: center;
+        }
+
         img {
             display: none;
         }
     }
 
     #portfolio {
-        .body-p{
-            nav{
-                ul{
+        .body-p {
+            nav {
+                ul {
                     justify-content: center;
                 }
             }
-            .img-portfolio{
+
+            .img-portfolio {
                 justify-content: center;
             }
         }
     }
-    #sponsor{
-        .sponsor-part{
+
+    #sponsor {
+        .sponsor-part {
             width: 100%;
             justify-content: center;
             margin-bottom: 20px;
@@ -398,31 +637,93 @@ footer {
 
 //for phone
 @media (max-width: 600px) {
-    .header-part{
+    #portfolio{
         justify-content: center;
-        nav{
+    }
+    #portfolio .body-p .ana-portfolio .right-p .right-p-middle .left-middle img{
+        width: 100%;
+        object-fit: cover;
+    }
+    #portfolio .body-p .ana-portfolio .right-p .right-p-middle .right-middle:hover .hover-p{
+        width: 100%;
+    }
+    #portfolio .body-p .ana-portfolio .right-p .right-p-middle .right-middle img{
+        width: 100%;
+        object-fit: cover;
+    }
+    #portfolio .body-p .ana-portfolio .right-p .right-p-middle{
+        flex-wrap: wrap;
+    }
+    #portfolio .body-p .ana-portfolio .img-p .left-p-2 img{
+        width: 100%;
+    }
+    #portfolio .body-p .ana-portfolio .right-p .right-p-middle .left-middle{
+        width: 100%;
+    }
+    #portfolio .body-p .ana-portfolio .right-p .right-p-middle .right-middle{
+        width: 100%;
+    }
+    .header-part {
+        width: 100%;
+        justify-content: center;
+
+        nav {
             display: none;
         }
     }
-    .left-home{
+
+    .left-home {
         width: 60%;
         left: 0px;
         top: 0px;
         justify-content: center;
     }
-    #portfolio{
-        .body-p{
+
+    .body-p{
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        flex-wrap: wrap;
+        nav{
             width: 100%;
-            .img-portfolio{
+            ul{
+                width: 100%;
+                justify-content: center;
+            }
+        }
+        .ana-portfolio{
+            .img-p{
+                width: 100%;
+                img{
+                    width: 200px;
+                }
+            }
+        }
+    }
+    #contact{
+        .down-blog{
+            justify-content: center;
+        }
+        .contect-blog{
+            justify-content: center;
+        }
+    }
+
+    #portfolio {
+        .body-p {
+            width: 100%;
+
+            .img-portfolio {
                 justify-content: center;
             }
         }
     }
-    #sponsor{
-        .sponsor-part{
+
+    #sponsor {
+        .sponsor-part {
             height: auto;
             justify-content: center;
         }
     }
-    
+
 }
